static/css/frontside-website.webflow.css
.widewrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1346px;
  padding-top: 40px;
  padding-right: 33px;
  padding-left: 33px;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.widewrapper.values {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  grid-auto-columns: 1fr;
  -ms-grid-columns: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  -ms-grid-rows: auto auto;
  grid-template-rows: auto auto;
}

.widewrapper.column {
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.nav-menu {
  margin-right: auto;
  margin-left: auto;
}

.navbar {
  padding-bottom: 20px;
  background-color: transparent;
}

.fs-body {
  font-family: proxima-nova, sans-serif;
  color: #14315d;
  font-size: 20px;
  line-height: 30px;
}

.heading {
  margin-bottom: 34px;
  color: #14315d;
  font-size: 50px;
  line-height: 55px;
  font-weight: 800;
  letter-spacing: -1px;
  text-transform: uppercase;
}

.heading.centered {
  text-align: center;
}

.text-span-2 {
  color: #f74d7b;
}

.subheader {
  color: #4f6586;
  font-size: 35px;
  line-height: 40px;
}

.subheader.centered {
  text-align: center;
}

.herotext {
  width: 47.6%;
  margin-right: 60px;
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.herotext.cenetered {
  width: 100%;
  max-width: 894px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 33px;
  padding-left: 33px;
}

.text-span-4 {
  color: #26abe8;
}

.navlink {
  margin-right: 10px;
  margin-left: 10px;
  color: #14315d;
  font-size: 15px;
  font-weight: 700;
  letter-spacing: -0.5px;
}

.navlink.w--current {
  background-image: -webkit-gradient(linear, left top, right top, from(#26abe8), to(#f74d7b));
  background-image: linear-gradient(90deg, #26abe8, #f74d7b);
  color: #f74d7b;
  font-weight: 800;
  letter-spacing: 0px;
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.client-logo {
  margin: 10px auto;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  -ms-grid-row-align: auto;
  align-self: auto;
  -webkit-box-ordinal-group: 1;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  opacity: 0.5;
}

.client-logo.home {
  margin-right: 30px;
  margin-left: 30px;
}

.horizontal-logos {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1195px;
  margin-top: 40px;
  margin-bottom: 40px;
  padding-right: 33px;
  padding-left: 33px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
}

.horizontal-logos.narrow {
  max-width: 744px;
  margin-top: 30px;
  margin-bottom: 60px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.button {
  padding: 10px 35px;
  border-radius: 50px;
  font-size: 23px;
  font-weight: 700;
}

.button.cta {
  display: inline-block;
  padding-bottom: 10px;
  background-image: url('../images/decor-button-twist2x.png'), -webkit-gradient(linear, left top, right top, from(#26abe8), to(#f74d7b));
  background-image: url('../images/decor-button-twist2x.png'), linear-gradient(90deg, #26abe8, #f74d7b);
  background-position: -15px -15px, 0px 0px;
  background-size: 317px, auto;
}

.button.cta.nav {
  margin-left: 46px;
  padding: 3px 20px;
  font-size: 15px;
  font-weight: 800;
  letter-spacing: 0.4px;
}

.button.white {
  background-color: #fff;
  color: #14315d;
}

.button.topage {
  margin-top: 40px;
  padding: 8px 20px;
  background-color: #14315d;
  color: #fff;
  font-size: 20px;
}

.button.topage.arrow {
  margin-left: 10px;
  padding-right: 13px;
  padding-left: 13px;
  font-weight: 800;
}

.button.topage.small {
  padding-top: 5px;
  padding-bottom: 5px;
  font-size: 16px;
}

.button.purple {
  margin-top: 40px;
  background-color: #897eaf;
  background-image: -webkit-gradient(linear, left top, right top, from(#6296cb), color-stop(40%, #937aaf), color-stop(60%, #897eaf), to(#ba6892));
  background-image: linear-gradient(90deg, #6296cb, #937aaf 40%, #897eaf 60%, #ba6892);
}

.button.primary {
  padding-top: 15px;
  padding-bottom: 15px;
  background-color: #14315d;
}

.button.cta {
  display: inline-block;
  padding-bottom: 10px;
  background-image: url('../images/decor-button-twist2x.png'), -webkit-gradient(linear, left top, right top, from(#26abe8), to(#f74d7b));
  background-image: url('../images/decor-button-twist2x.png'), linear-gradient(90deg, #26abe8, #f74d7b);
  background-position: -15px -15px, 0px 0px;
  background-size: 317px, auto;
}

.button.submit {
  background-color: #14315d;
  background-image: -webkit-gradient(linear, left top, right top, from(#26abe8), to(#f74d7b));
  background-image: linear-gradient(90deg, #26abe8, #f74d7b);
}

.cta-intro {
  margin-bottom: 25px;
  padding-right: 0px;
  color: #14315d;
  font-size: 25px;
  font-weight: 700;
  letter-spacing: 0.2px;
}

.cta-intro.overcolor {
  color: #fff;
}
/* ... */

